--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- Custom styles for this template -->
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/style-responsive.css" rel="stylesheet">
+  <link href="assets/css/custom.css" rel="stylesheet">
 
   <script src="https://unpkg.com/page/page.js"></script>
   <script src="assets/js/jquery.js"></script>
