--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script src="assets/js/jquery.scrollTo.min.js"></script>
   <script src="assets/js/jquery.nicescroll.js" type="text/javascript"></script>
   <script src="assets/js/common-scripts.js"></script>
-  <base href="/antireact/" >
+  <base href="/wbfrm/" >
 </head>
 <body>
   <div id="container">
