--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     <script src="assets/vendor/charts/c3charts/c3.min.js"></script>
     <script src="assets/vendor/charts/c3charts/d3-5.4.0.min.js"></script>
     <script src="assets/vendor/charts/c3charts/C3chartjs.js"></script>
-    <script src="assets/libs/js/dashboard-ecommerce.js"></script>
+    <!-- <script src="assets/libs/js/dashboard-ecommerce.js"></script> -->
 </body>
 </html>
